Action on Sonarqube test results